--- a/Bericht/Projektdokumentation.tex
+++ b/Bericht/Projektdokumentation.tex
@@ -36,7 +36,7 @@ Um das Thema für das Projekt zu wählen, hat man sich in Gruppen aufgeteilt und
 Diese wurde mithilfe der Post-IT Methode durchgeführt. Man schreibt die Ideen für eine Lösung eines Problems.
 Dadurch werden die Ideen gesammelt und das Thema, das Projekt wird näher definiert und  dargestellt. \\\\
 Durch für Methode des Design Thinking wird das Thema mehr genaue definiert. Man hat sich immer die Fragen gestellt: Welches Problem soll gelöst werden? Wer ist der Adressat der Lösung? Welche Priorität hat dieses Vorhaben? Was sind die Erfolgsfaktoren? \\\\
-Die "SchrödingersAlarm" Gruppe sind 4 Studenten, die an der HTW Berlin den Master Informations- und Kommunikationstechnik studieren. Die Qualität in der Gruppe hat sie zusammen vereint. Deren Qualitäten basieren sich auf Teamfähigkeit, Zuverlässigkeit und Lernbereitschaft. Jeder in der Gruppe ist selbstständig und hat eine eigenverantwortliche Arbeitsweise. Die Loyalität eine bessere Welt zu gestellten, hat sie motiviert dieses Projekt miteinander zu arbeiten.\\\\
+Die „SchrödingersAlarm“ Gruppe sind 4 Studenten, die an der HTW Berlin den Master Informations- und Kommunikationstechnik studieren. Die Qualität in der Gruppe hat sie zusammen vereint. Deren Qualitäten basieren sich auf Teamfähigkeit, Zuverlässigkeit und Lernbereitschaft. Jeder in der Gruppe ist selbstständig und hat eine eigenverantwortliche Arbeitsweise. Die Loyalität eine bessere Welt zu gestellten, hat sie motiviert dieses Projekt miteinander zu arbeiten.\\\\
 Nachdem das Team Ideen gesammelt hat, kam es zu der Idee ein System zum Schutz vor Automobil Diebstahl. 
 Als ersten Prototyp soll ein integriertes GPS, der die Koordinaten an den Nutzer über sein Smartphone senden. 
 Bei einem Fall, wo sich das Auto sich vom Smartphone des Nutzers weiter entfernt, soll eine Push-Benachrichtigung an den Nutzer gesendet.
@@ -53,7 +53,7 @@ Bei einem Fall, wo sich das Auto sich vom Smartphone des Nutzers weiter entfernt
 	\input{Entwicklung_Webserver.tex}	
 	\input{Entwicklung_Android.tex}		
 	\input{Entwicklung_iOS.tex}	
-	\chapter{Produkt}
+    \chapter{Produkt}
 	\input{Produkt.tex}
 	\chapter{Rück- und Ausblick}
 	\input{Rück_Ausblick}
