--- a/Bericht/Quellen.bib
+++ b/Bericht/Quellen.bib
@@ -20,25 +20,25 @@
   url       = {https://www.amazon.de/GPS-Tracker-Motorrad-Fahrzeuge-Akkulaufzeit-Standby/dp/B07TV4W8H4/ref=sr_1_8?keywords=gps auto tracker&qid=1645548524&sprefix=gps aut,aps,97&sr=8-8},
 }
 
-{Flutter,
-  author    = Jesko Landwehr ,
-  title     = Was ist Flutter?,
-  owner     = it-talents.de,
+@TechReport{Flut,
+  author    = {Jesko Landwehr} ,
+  title     = {Was ist Flutter?},
+  owner     = {it-talents.de},
   timestamp = {22.02.2022},
   url       = {https://it-talents.de/it-wissen/was-ist-flutter/},
 }
-@Flutterhaft{Flutterhaft,
-  author    = Jonas Hungershausen Lars Vogel ,
-  title     = Mobiles Entwickeln mit dem Flutter SDK,
-  owner     = Entwickler Magazin,
+@TechReport{SDK,
+  author    = {Jonas Hungershausen Lars Vogel} ,
+  title     = {Mobiles Entwickeln mit dem Flutter SDK},
+  owner     = {Entwickler Magazin},
   timestamp = {22.02.2022},
   url       = {https://entwickler.de/mobile/flutter-haft},
 }
 
-@android{android,
-  author    = programmierenlernenhq ,
-  title     = Android Studio Tipps und Tricks,
-  owner     = programmierenlernenhq,
+@TechReport{AndSt,
+  author    = {programmierenlernenhq} ,
+  title     = {Android Studio Tipps und Tricks},
+  owner     = {programmierenlernenhq},
   timestamp = {22.02.2022},
   url       = {https://www.programmierenlernenhq.de/android-studio-tipps/},
 }
