--- a/Bericht/Quellen.bib
+++ b/Bericht/Quellen.bib
@@ -27,6 +27,7 @@
   timestamp = {22.02.2022},
   url       = {https://it-talents.de/it-wissen/was-ist-flutter/},
 }
+
 @TechReport{SDK,
   author    = {Jonas Hungershausen Lars Vogel} ,
   title     = {Mobiles Entwickeln mit dem Flutter SDK},
@@ -63,6 +64,34 @@
   owner     = {Apple Inc},
   timestamp = {22.02.2022},
   url       = {https://developer.apple.com/documentation/bundleresources/information_property_list/nsapptransportsecurity},
+}
+
+@TechReport{Ahmad2020,
+  author      = {Suhali Ahmad},
+  institution = {World of VR},
+  title       = {XCode},
+  year        = {2020},
+  keywords    = {XCode},
+  url         = {https://worldofvr.de/xcode/},
+}
+
+@TechReport{Inca,
+  author      = {Apple Inc},
+  institution = {Apple Inc},
+  title       = {SwiftUI},
+  keywords    = {SwiftUI},
+  owner       = {Apple Inc},
+  timestamp   = {2022-02-22},
+  url         = {https://developer.apple.com/documentation/swiftui},
+}
+
+@Article{Bode2022,
+  author   = {Katja Nele Bode},
+  journal  = {centaur},
+  title    = {Anleitung zum Fliegen lernen},
+  year     = {2022},
+  month    = feb,
+  keywords = {Kreativitätstheorie},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
